--- a/.github/workflows/script_run.yml
+++ b/.github/workflows/script_run.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+      - name: Install dependencies
+        run: pip install opencv-python
         with:
           python-version: '3.9'
       - name: Run Python Script
