--- a/.github/workflows/script_run.yml
+++ b/.github/workflows/script_run.yml
@@ -5,13 +5,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with:  
+        with:
           python-version: '3.9'
+      - name: Update pip (optional, but recommended)
+        run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: pip install mediapipe opencv-python
+        run: pip install --upgrade opencv-python mediapipe  
       - name: Run Python Script
         run: python main_app.py
