--- a/.github/workflows/script_run.yml
+++ b/.github/workflows/script_run.yml
@@ -13,7 +13,9 @@ jobs:
           python-version: '3.9'
       - name: Update pip (optional, but recommended)
         run: python -m pip install --upgrade pip
+      - name: Uninstall dependencies
+        run: pip uninstall opencv-python;
       - name: Install dependencies
-        run: pip install --upgrade opencv-python mediapipe  
+        run: pip install opencv-python-headless mediapipe  
       - name: Run Python Script
         run: python main_app.py
