--- a/.github/workflows/cam_checker.yml
+++ b/.github/workflows/cam_checker.yml
@@ -7,14 +7,15 @@ on:
 
 jobs:
   webcam-check:
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest  # Use GitHub-hosted runner (ubuntu-latest)
     steps:
-      - name: Set up v4l2-ctl
+      - name: Set up v4l2-ctl and v4l2loopback
         run: |
           sudo apt-get update
-          sudo apt-get install -y v4l-utils  # Install v4l2-ctl tool
+          sudo apt-get install -y v4l-utils v4l2loopback-dkms  # Install v4l-utils and v4l2loopback
+          sudo modprobe v4l2loopback devices=1 video_nr=2 card_label="VirtualCam"  # Create a virtual video device
           
       - name: Run v4l2-ctl Command
         run: |
           echo "Listing video devices:"
-          v4l2-ctl --list-devices
+          v4l2-ctl --list-devices  # List video devices (including the virtual device)
